# ClimateLens

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  topic_visualizations.ipynb
azureml/: AML_job.py  env_bert.yml  environment.yml  run_samples.sh  run_scripts.sh  submit_job.py  test_run_scripts.sh
data/: README.md
docs/: mkdocs.yml
docs/docs/: index.md
emotion_visualizations/: emotion_analysis_summary.html
notebooks/: KHP_Topic_Modeling.ipynb
src/: README.md  data_preprocessing.py  dynamic_topic_modeling.py  emotion_classification.py  emotion_visualization.py  emotion_visualizations.ipynb  reddit_data_filtering.py  sentiment_emotion_classification.py  topic_modeling.py  twitter_data_cleaner.py
src/LDA/: lda_topic_modeling.py
src/notebooks/: dynamic_topic_modeling.ipynb
src/utils/: create_twitter_sample.py  twitter_chunks.py  twitter_sample.py
